# flexrl

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/flexrl/algorithms/: __init__.py  dqn.py  dqn_atari.py  ppo.py  ppo_atari.py  ppo_multidiscrete.py  qr_dqn.py  qr_dqn_atari.py  sac_continuous_action.py  utils.py
src/flexrl/envs/: __init__.py  akdtmaze.py  akdtmazeflat.py  akdtmazepixel.py  kdtmaze.py  kdtmazeflat.py  kdtmazepixel.py  register.py
src/flexrl/offline/: inac.py  inac_jax.py  iql.py  iql_jax.py  sac_n_jax.py
src/flexrl/online/: dqn.py  dqn_atari.py  ppo.py  ppo_atari.py  ppo_multidiscrete.py  qr_dqn.py  qr_dqn_atari.py  sac.py
tests/: test_atari.py  test_classic_control.py  test_d4rl.py  test_mujoco_py.py
